# time-optics

./: CHANGELOG.md  LICENSE  README.md  shell.nix  time-optics.cabal
src/Data/Time/: Optics.hs
src/Data/Time/Calendar/: Optics.hs
src/Data/Time/Clock/: Optics.hs
src/Data/Time/Format/: Optics.hs
src/Data/Time/LocalTime/: Optics.hs
