cabal-version:      3.0
name:               time-optics
version:            0.1.0.0
synopsis:           Optics for Data.Time
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matt Mullen (mutantmell)
maintainer:         malaguy@gmail.com
-- A copyright notice.
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Time.Optics
                    , Data.Time.Calendar.Optics
                    , Data.Time.Clock.Optics
                    , Data.Time.Format.Optics
                    , Data.Time.LocalTime.Optics
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.16
                    , optics >= 0.4.2
                    , time >= 1.11
                    , text
                    , bytestring >= 0.11
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite time-optics-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        time-optics
